--- a/style.css
+++ b/style.css
@@ -44,11 +44,11 @@ nav ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #00fffb;
     position: absolute;
     left: 0;
     bottom: -6px;
-    transition: 0.5s;
+    transition: 0.4s;
 }
 nav ul li a:hover::after{
     width: 100% ;
@@ -62,5 +62,5 @@ nav ul li a:hover::after{
     margin-top: 20px;
 }
 .headerText h1  span {
-    color: #ff004f;
+    color: #00fffb;
 }
