--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ nav ul li a:hover::after {
     flex-basis: 60%;
 }
 
-.para-aboutme{
+.para-aboutme {
     color: #ababab;
 }
 
@@ -149,10 +149,67 @@ nav ul li a:hover::after {
     color: #ababab;
 }
 
-.tab-contents{
+.tab-contents {
     display: none;
 }
 
-.tab-contents.active-tab{
+.tab-contents.active-tab {
     display: block;
+}
+
+/* About Section Ended  */
+/* Services Section Started  */
+
+#services {
+    padding: 30px 0;
+}
+
+.services-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+}
+
+.services-list div {
+    padding: 40px;
+    background-color: #262626;
+    font-size: 13px;
+    font-weight: 300;
+    border-radius: 10px;
+    transition: background 0.5s, transform 0.5s;
+}
+
+.services-list div i {
+    font-size: 50px;
+    margin-bottom: 30px;
+    background-color: transparent;
+}
+
+.back-color {
+    background-color: transparent;
+}
+
+.services-list div h2 {
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+
+.services-list div a {
+    text-decoration: none;
+    font-size: 12px;
+    color: #fff;
+    margin-top: 20px;
+    display: inline-block;
+}
+
+.services-list div:hover {
+    background-color: #00fffb;
+    transform: translateY(-15px);
+    color: #080808;
+}
+
+.back-color:hover {
+    color: black;
 }
